crates/pixi_manifest/src/snapshots/pixi__project__manifest__document__tests__test_remove_environment_pixi.toml.snap
---
source: src/project/manifest/document.rs
assertion_line: 602
expression: source.to_string()
---
[environments]
bar = ["default"]
